tests/baselines/reference/asyncGenerators.classMethod.16.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.16.es6.ts(3,14): error TS1109: Expression expected.


==== tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.16.es6.ts (1 errors) ====
    class C {
        async * f() {
            await;
                 ~
!!! error TS1109: Expression expected.
        }
    }